// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Welcome should change route to create profile 1`] = `
<DocumentFragment>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <div
      class="px-4 sm:px-6 lg:px-8 bg-theme-background"
    >
      <div
        class="flex items-center flex-shrink-0 h-20 md:h-24"
      >
        <div
          class="flex p-2 rounded-lg bg-logo"
        >
          <img
            alt="ARK Logo"
            class="h-6 md:h-8 lg:h-10"
            src="ark-logo.png"
          />
        </div>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 space-y-5 "
    >
      <div
        class="sc-fzoLag fvqzEZ flex flex-col justify-center flex-1 text-center"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <h1
            class="mb-8"
          >
            Welcome to ARK
          </h1>
          <div
            class="lg:w-4/5 xl:w-2/3 w-full mx-auto"
          >
            <svg>
              welcome-banner.svg
            </svg>
          </div>
          <div
            class="md:max-w-xl max-w-lg mx-auto mt-8"
          >
            <p
              class="text-theme-neutral-dark md:text-base mb-4 text-sm"
            >
              Create a new Profile or login with your MarketSquare account to get started.
            </p>
            <div
              class="md:space-x-3 md:flex-row flex flex-col"
            >
              <button
                class="sc-AxjAm ddQVWI w-full"
                color="primary"
                type="button"
              >
                <div
                  class="sc-AxiKw dklFyP"
                  height="20"
                  width="20"
                >
                  <svg>
                    msq.svg
                  </svg>
                </div>
                <span
                  class="ml-2"
                >
                  Login with MarketSquare
                </span>
              </button>
              <button
                class="sc-AxjAm ddJBbC md:mt-0 w-full mt-2"
                color="primary"
                type="button"
              >
                Create Profile
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Welcome should navigate in profile settings from profile card menu 1`] = `
<DocumentFragment>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <div
      class="px-4 sm:px-6 lg:px-8 bg-theme-background"
    >
      <div
        class="flex items-center flex-shrink-0 h-20 md:h-24"
      >
        <div
          class="flex p-2 rounded-lg bg-logo"
        >
          <img
            alt="ARK Logo"
            class="h-6 md:h-8 lg:h-10"
            src="ark-logo.png"
          />
        </div>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 space-y-5 "
    >
      <div
        class="sc-fzoLag fvqzEZ flex flex-col justify-center flex-1 text-center"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <h1
            class="mb-8"
          >
            Welcome to ARK
          </h1>
          <div
            class="lg:w-4/5 xl:w-2/3 w-full mx-auto"
          >
            <svg>
              welcome-banner.svg
            </svg>
          </div>
          <div
            class="md:max-w-xl max-w-lg mx-auto mt-8"
          >
            <h2
              class="md:text-2xl mx-4 text-xl font-bold"
            >
              Select Profile
            </h2>
            <p
              class="text-theme-neutral-dark md:text-base text-sm"
            >
              You already have a profile, you can choose any of them
            </p>
            <div
              class="mt-6 mb-8 space-y-3"
            >
              <div
                class="sc-fzoXzr AzWth"
                data-testid="ProfileCard"
              >
                <div
                  class="relative px-6 py-4 sm:flex sm:items-center"
                >
                  <div
                    class="absolute top-0 right-0 flex items-center justify-center w-6 h-6 p-1 mt-3 -mt-2 -mr-4 text-theme-neutral-light"
                  >
                    <div
                      class="relative"
                      data-testid="dropdown__toggle"
                    >
                      <div
                        class="float-right outline-none cursor-pointer focus:outline-none"
                      >
                        <div
                          class="sc-AxiKw dklFyP"
                          height="20"
                          width="20"
                        >
                          <svg>
                            settings.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex flex-row justify-between w-full"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 ikUhMz"
                        data-testid="profile-card__user--avatar"
                      >
                        <img
                          alt="Bob"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"50\\" fill=\\"rgb(63, 81, 181)\\"/><circle r=\\"55\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"50\\" cy=\\"60\\" fill=\\"rgb(255, 87, 34)\\"/></svg>"
                          title="Bob"
                        />
                      </div>
                      <div
                        class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-left"
                      >
                        <p
                          class="text-sm font-semibold text-theme-neutral"
                        >
                          Name
                        </p>
                        <p
                          class="font-semibold text-theme-neutral-dark"
                          data-testid="profile-card__user--name"
                        >
                          Bob
                        </p>
                      </div>
                    </div>
                    <div
                      class="flex items-center"
                    >
                      <div
                        class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-right"
                      >
                        <p
                          class="text-sm font-semibold text-theme-neutral"
                        >
                          Total balance
                        </p>
                        <p
                          class="font-semibold text-theme-neutral-dark"
                          data-testid="profile-card__user--balance"
                        >
                          0
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="sc-AxirZ jjvtQn border-theme-neutral-300"
              type="horizontal"
            />
            <p
              class="text-theme-neutral-dark md:text-base mb-4 text-sm"
            >
              Create a new Profile or login with your MarketSquare account to get started.
            </p>
            <div
              class="md:space-x-3 md:flex-row flex flex-col"
            >
              <button
                class="sc-AxjAm ddQVWI w-full"
                color="primary"
                type="button"
              >
                <div
                  class="sc-AxiKw dklFyP"
                  height="20"
                  width="20"
                >
                  <svg>
                    msq.svg
                  </svg>
                </div>
                <span
                  class="ml-2"
                >
                  Login with MarketSquare
                </span>
              </button>
              <button
                class="sc-AxjAm ddJBbC md:mt-0 w-full mt-2"
                color="primary"
                type="button"
              >
                Create Profile
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Welcome should render with profiles 1`] = `
<DocumentFragment>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <div
      class="px-4 sm:px-6 lg:px-8 bg-theme-background"
    >
      <div
        class="flex items-center flex-shrink-0 h-20 md:h-24"
      >
        <div
          class="flex p-2 rounded-lg bg-logo"
        >
          <img
            alt="ARK Logo"
            class="h-6 md:h-8 lg:h-10"
            src="ark-logo.png"
          />
        </div>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 space-y-5 "
    >
      <div
        class="sc-fzoLag fvqzEZ flex flex-col justify-center flex-1 text-center"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <h1
            class="mb-8"
          >
            Welcome to ARK
          </h1>
          <div
            class="lg:w-4/5 xl:w-2/3 w-full mx-auto"
          >
            <svg>
              welcome-banner.svg
            </svg>
          </div>
          <div
            class="md:max-w-xl max-w-lg mx-auto mt-8"
          >
            <h2
              class="md:text-2xl mx-4 text-xl font-bold"
            >
              Select Profile
            </h2>
            <p
              class="text-theme-neutral-dark md:text-base text-sm"
            >
              You already have a profile, you can choose any of them
            </p>
            <div
              class="mt-6 mb-8 space-y-3"
            >
              <div
                class="sc-fzoXzr AzWth"
                data-testid="ProfileCard"
              >
                <div
                  class="relative px-6 py-4 sm:flex sm:items-center"
                >
                  <div
                    class="absolute top-0 right-0 flex items-center justify-center w-6 h-6 p-1 mt-3 -mt-2 -mr-4 text-theme-neutral-light"
                  >
                    <div
                      class="relative"
                      data-testid="dropdown__toggle"
                    >
                      <div
                        class="float-right outline-none cursor-pointer focus:outline-none"
                      >
                        <div
                          class="sc-AxiKw dklFyP"
                          height="20"
                          width="20"
                        >
                          <svg>
                            settings.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="flex flex-row justify-between w-full"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-1vsy2s2-0 ikUhMz"
                        data-testid="profile-card__user--avatar"
                      >
                        <img
                          alt="Bob"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"50\\" fill=\\"rgb(63, 81, 181)\\"/><circle r=\\"55\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"50\\" cy=\\"60\\" fill=\\"rgb(255, 87, 34)\\"/></svg>"
                          title="Bob"
                        />
                      </div>
                      <div
                        class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-left"
                      >
                        <p
                          class="text-sm font-semibold text-theme-neutral"
                        >
                          Name
                        </p>
                        <p
                          class="font-semibold text-theme-neutral-dark"
                          data-testid="profile-card__user--name"
                        >
                          Bob
                        </p>
                      </div>
                    </div>
                    <div
                      class="flex items-center"
                    >
                      <div
                        class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-right"
                      >
                        <p
                          class="text-sm font-semibold text-theme-neutral"
                        >
                          Total balance
                        </p>
                        <p
                          class="font-semibold text-theme-neutral-dark"
                          data-testid="profile-card__user--balance"
                        >
                          0
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="sc-AxirZ jjvtQn border-theme-neutral-300"
              type="horizontal"
            />
            <p
              class="text-theme-neutral-dark md:text-base mb-4 text-sm"
            >
              Create a new Profile or login with your MarketSquare account to get started.
            </p>
            <div
              class="md:space-x-3 md:flex-row flex flex-col"
            >
              <button
                class="sc-AxjAm ddQVWI w-full"
                color="primary"
                type="button"
              >
                <div
                  class="sc-AxiKw dklFyP"
                  height="20"
                  width="20"
                >
                  <svg>
                    msq.svg
                  </svg>
                </div>
                <span
                  class="ml-2"
                >
                  Login with MarketSquare
                </span>
              </button>
              <button
                class="sc-AxjAm ddJBbC md:mt-0 w-full mt-2"
                color="primary"
                type="button"
              >
                Create Profile
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Welcome should render without profiles 1`] = `
<DocumentFragment>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <div
      class="px-4 sm:px-6 lg:px-8 bg-theme-background"
    >
      <div
        class="flex items-center flex-shrink-0 h-20 md:h-24"
      >
        <div
          class="flex p-2 rounded-lg bg-logo"
        >
          <img
            alt="ARK Logo"
            class="h-6 md:h-8 lg:h-10"
            src="ark-logo.png"
          />
        </div>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 space-y-5 "
    >
      <div
        class="sc-fzoLag fvqzEZ flex flex-col justify-center flex-1 text-center"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <h1
            class="mb-8"
          >
            Welcome to ARK
          </h1>
          <div
            class="lg:w-4/5 xl:w-2/3 w-full mx-auto"
          >
            <svg>
              welcome-banner.svg
            </svg>
          </div>
          <div
            class="md:max-w-xl max-w-lg mx-auto mt-8"
          >
            <p
              class="text-theme-neutral-dark md:text-base mb-4 text-sm"
            >
              Create a new Profile or login with your MarketSquare account to get started.
            </p>
            <div
              class="md:space-x-3 md:flex-row flex flex-col"
            >
              <button
                class="sc-AxjAm ddQVWI w-full"
                color="primary"
                type="button"
              >
                <div
                  class="sc-AxiKw dklFyP"
                  height="20"
                  width="20"
                >
                  <svg>
                    msq.svg
                  </svg>
                </div>
                <span
                  class="ml-2"
                >
                  Login with MarketSquare
                </span>
              </button>
              <button
                class="sc-AxjAm ddJBbC md:mt-0 w-full mt-2"
                color="primary"
                type="button"
              >
                Create Profile
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
